non-root-docker-images/prometheus-image/deploy/k8s/minikube/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-localdev
  labels:
    project: monitoring
