non-root-docker-images/prometheus-image/deploy/k8s/minikube/Service.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring-localdev
spec:
  ports:
  - port: 9090
  clusterIP: None
  selector:
    project: monitoring
    app.kubernetes.io/name: prometheus
