non-root-docker-images/prometheus-image/deploy/k8s/minikube/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: monitoring-localdev
spec:
  ingress: []
  podSelector: {}
