non-root-docker-images/prometheus-image/deploy/k8s/minikube/NetworkPolicy1.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-infra
  namespace: monitoring-localdev
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: monitoring
    ports:
    - port: 9090
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-infra
